Mojo puzzles algorithms post (#4)
* Complete axis sum puzzle

* Update settings to allow repo options

* Add section for 2d indexing intro and naive matmul

* Fix image alignment

* Add description

* Add image for p14 shared mem matmul

* Add first version for roofline model

* Complete roofline model

* Add ncu error details

* Update blog image

* Add incorrect ojs plot

* Generate roofline plot for first two kernels

* Change plot details title

* Fix formatting

* Add warp intro

* Add tiled matmul gif

* Improve conclusion

* Improve blelloch fix section

* Fix thread hierachy image

* Improve explanation of tiling

* Moar improvements

* Remove section explaining tile sizes

* Add moar citations

* Add mojo functions citations

* Add citation

* Add moar citations

* Add annotated matmul

* Fix tiled matmul image

* Complete draft

* Remove option to edit post

--- a/posts/citations/mojo_citations.bib
+++ b/posts/citations/mojo_citations.bib
@@ -138,3 +138,85 @@
   url = {https://arxiv.org/abs/2205.14135},
   note = {Introduces FlashAttention, an IO-aware algorithm for efficient attention computation.}
 }
+@misc{siboehm_cuda_mmm,
+  author = {Simon Boehm},
+  title = {CUDA Matrix Multiplication Madness},
+  year = {2022},
+  url = {https://siboehm.com/articles/22/CUDA-MMM},
+  note = {Blog post exploring various CUDA matrix multiplication strategies and optimizations.}
+}
+@misc{mojo_layouttensor_setitem,
+  author = {Modular, Inc.},
+  title = {LayoutTensor.\_\_setitem\_\_ API Reference},
+  year = {2024},
+  url = {https://docs.modular.com/mojo/kernels/layout/layout_tensor/LayoutTensor/#__setitem__},
+  note = {Official documentation for the LayoutTensor \_\_setitem\_\_ method in Mojo.}
+}
+@misc{nhrfau_roofline_model,
+  author = {NHR@FAU},
+  title = {Roofline Model: Performance Modeling for Modern Processors},
+  year = {2022},
+  howpublished = {\url{https://www.youtube.com/watch?v=IrkNZG8MJ64}},
+  note = {Roofline performance model for CPUs and GPUs.}
+}
+@misc{rtx_ada_specs,
+  author = {NVIDIA Corporation},
+  title = {NVIDIA RTX 4000 Ada Generation Datasheet},
+  year = {2023},
+  url = {https://resources.nvidia.com/en-us-briefcase-for-datasheets/rtx-4000-ada-datashe-1?ncid=no-ncid},
+  note = {Official datasheet for the RTX 4000 Ada}
+}
+@misc{amd_gpu_basics,
+  author = {Oak Ridge National Laboratory},
+  title = {AMD GPU Basics},
+  year = {2019},
+  url = {https://www.olcf.ornl.gov/wp-content/uploads/2019/10/ORNL_Application_Readiness_Workshop-AMD_GPU_Basics.pdf},
+  note = {Workshop slides covering AMD GPU architecture and programming fundamentals.}
+}
+@misc{nvidia_shared_memory_stats,
+  author = {NVIDIA Corporation},
+  title = {CUDA Kernel-Level Shared Memory Statistics},
+  url = {https://docs.nvidia.com/gameworks/content/developertools/desktop/analysis/report/cudaexperiments/kernellevel/memorystatisticsshared.htm},
+  note = {Official documentation on shared memory statistics in CUDA kernels.}
+}
+@misc{leimao_cuda_shared_memory_bank,
+  author = {Lei Mao},
+  title = {CUDA Shared Memory Bank},
+  year = {2022},
+  url = {https://leimao.github.io/blog/CUDA-Shared-Memory-Bank/},
+  note = {Blog post explaining CUDA shared memory bank structure and bank conflicts.}
+}
+@misc{mojo_layouttensor_tile,
+  author = {Modular, Inc.},
+  title = {LayoutTensor.tile API Reference},
+  url = {https://docs.modular.com/mojo/kernels/layout/layout_tensor/LayoutTensor/#tile},
+  note = {Official documentation for the LayoutTensor tile method in Mojo.}
+}
+
+@misc{mojo_copy_dram_to_sram_async,
+  author = {Modular, Inc.},
+  title = {copy\_dram\_to\_sram\_async API Reference},
+  url = {https://docs.modular.com/mojo/kernels/layout/layout_tensor/copy_dram_to_sram_async/},
+  note = {Official documentation for the copy\_dram\_to\_sram\_async method in Mojo.}
+}
+@misc{mojo_async_copy_wait_all,
+  author = {Modular, Inc.},
+  title = {async\_copy\_wait\_all API Reference},
+  url = {https://docs.modular.com/mojo/stdlib/gpu/memory/async_copy_wait_all},
+  note = {Official documentation for the async\_copy\_wait\_all method in Mojo.}
+}
+@misc{nvidia_ampere_unified_shared_memory,
+  author = {NVIDIA Corporation},
+  title = {Ampere Tuning Guide: Unified Shared Memory and L1/Texture Cache},
+  year = {2023},
+  url = {https://docs.nvidia.com/cuda/ampere-tuning-guide/index.html#unified-shared-memory-l1-texture-cache},
+  note = {Official documentation on unified shared memory and L1/texture cache in NVIDIA Ampere GPUs.}
+}
+@misc{nvidia_blackwell_unified_shared_memory,
+  author = {NVIDIA Corporation},
+  title = {Blackwell Tuning Guide: Unified Shared Memory and L1/Texture Cache},
+  year = {2025},
+  url = {https://docs.nvidia.com/cuda/blackwell-tuning-guide/index.html#unified-shared-memory-l1-texture-cache},
+  note = {Official documentation on unified shared memory and L1/texture cache in NVIDIA Blackwell GPUs.}
+}
+
