Fix moar headings

--- a/posts/2025-07-20-gpu-puzzles-p2.qmd
+++ b/posts/2025-07-20-gpu-puzzles-p2.qmd
@@ -182,6 +182,9 @@ While this approach also gives the correct answer for this puzzle, it has multip
 
 ## LayoutTensor
 
+<details open>
+<summary> **Solution** </summary>
+
 alias TPB = 8
 alias SIZE = 8
 alias BLOCKS_PER_GRID = (1, 1)
@@ -189,11 +192,6 @@ alias THREADS_PER_BLOCK = (SIZE, 1)
 alias dtype = DType.float32
 alias layout = Layout.row_major(SIZE)
 alias out_layout = Layout.row_major(1)
-
-
-<details open>
-<summary> **Solution** </summary>
-
 
 ```{.mojo filename=p10.mojo}
 fn dot_product[
@@ -387,17 +385,17 @@ The blue cells are the data *owned* by the current thread-block. The orange cell
 
 ![](mojo_gpu_puzzles/p11_block_boundary.png)
 
-**Problem statement**
+### Problem statement
 
 Run a 1-D convolution with a `CONV₂`-tap kernel over an input that is longer than one block (`TPB` threads). We want every thread to:
 
-• pull data from **shared memory only** (once it's loaded, stay in-block)  
-• avoid divergent branches and random global reads  
-• keep the load pattern fully coalesced
+- Pull data from **shared memory only** (once it's loaded, stay in-block)  
+- Avoid divergent branches and random global reads  
+- Keep the load pattern fully coalesced
 
 Naïve global loads meet none of those goals-once a window crosses the block edge the tail threads must issue conditional, _straggling_ reads (i.e. each thread grabs a lone, scattered element from global memory instead of part of one tidy, coalesced burst).
 
-**The halo idea**
+### The halo idea
 
 Give each block an in-block "fence extension":
 
@@ -782,7 +780,7 @@ Blelloch's fix to these problems is to break the up-sweep and down-sweep into se
 
 The result is a scan that is both faster and safer on modern GPUs.
 
-**Up-sweep (reduce)**  
+### Up-sweep (reduce)
 
 - Build a binary reduction tree over log₂(n) rounds:
     - Round 1 (step=1): sum each adjacent pair, storing results at indices 1, 3, 5, …
@@ -793,7 +791,7 @@ The result is a scan that is both faster and safer on modern GPUs.
 ![](mojo_gpu_puzzles/p12_up.gif)
 *Up-Sweep: combining elements in a binary-tree fashion-build partial sums until the final element holds the total.*  
 
-**Down-sweep (propagate)**  
+### Down-sweep (propagate)
 
 After the up-sweep leaves `a[n-1]` containing the overall sum, we walk the tree top-down to scatter prefix sums into every slot:
 
