--- a/index.qmd
+++ b/index.qmd
@@ -7,6 +7,7 @@ listing:
   sort-ui: false
   filter-ui: false
   feed: true
+  image-height: 150px
 page-layout: full
 title-block-banner: true
 ---
