--- a/posts/2025-08-31-cl-dspy-eda.ipynb
+++ b/posts/2025-08-31-cl-dspy-eda.ipynb
@@ -5,9 +5,10 @@
    "metadata": {},
    "source": [
     "---\n",
-    "title: \"Curriculum Learning with DSPy\"\n",
+    "title: \"Curriculum Learning 🤝 DSPy: EDA\"\n",
     "author: Shubham Gupta\n",
     "date: '2025-08-31'\n",
+    "image: cl_dspy/curriculum_learning_data.png\n",
     "description: Diving into DSPy for ConvFinQA\n",
     "lightbox: true\n",
     "toc: true\n",
@@ -21,6 +22,19 @@
     "- programming\n",
     "- dspy\n",
     "---\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Financial reasoning over conversational data presents a unique challenge in NLP: models must not only understand natural language but also perform multi-step numerical computations while maintaining context across dialogue turns.\n",
+    "\n",
+    "[ConvFinQA](https://github.com/czyssrs/ConvFinQA) tackles this problem by combining conversational QA with financial documents and tables, requiring systems to execute chains of mathematical operations to arrive at correct answers.\n",
+    "\n",
+    "What if we could improve model performance by teaching systems to learn from easier examples first, gradually building up to complex multi-turn reasoning? This is the core idea behind curriculum learning.\n",
+    "\n",
+    "This post begins a series exploring curriculum learning with [DSPy](https://github.com/stanfordnlp/dspy). We start with an exploratory analysis of ConvFinQA to understand what makes some examples harder than others, identify complexity patterns in the data, and establish the foundation for a curriculum-based approach to training more effective reasoning systems."
    ]
   },
   {
@@ -1842,7 +1856,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Methodology"
+    "# Methodology\n",
+    "\n",
+    "<a id=\"methodology\"></a>\n"
    ]
   },
   {
@@ -2482,48 +2498,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Curriculum Stages"
+    "## Curriculum Design & Quota Rebalancing\n",
+    "\n",
+    "While our complexity classification captures overall difficulty, curriculum learning requires more nuanced sampling strategies. Simply taking the hardest examples might create an imbalanced curriculum that overrepresents certain types of complexity while ignoring others.\n",
+    "\n",
+    "Consider two scenarios:\n",
+    "1. **Naive sampling**: We randomly sample from our \"Hard\" bucket and end up with 80% long-context examples but only 5% multi-operation examples\n",
+    "2. **Quota sampling**: We ensure balanced representation across complexity dimensions\n",
+    "\n",
+    "The second approach creates a more robust curriculum. Our hard examples should include:\n",
+    "- **Deep reasoning** (4+ mathematical operations)\n",
+    "- **Long conversations** (7+ dialogue turns)\n",
+    "- **Dense context** (lengthy pre/post text)\n",
+    "- **Complex tables** (many cells, nested structures)\n",
+    "- **Noisy data** (duplicate columns, non-numeric values)\n",
+    "\n",
+    "This ensures our model learns to handle diverse types of complexity rather than overfitting to a single difficulty dimension. The following code implements quota-based sampling to achieve this balanced representation:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[Percentiles/train] pre P50=244, P65=365, P80=518, P90=637 | post P50=285, P65=407, P80=548, P90=679 | cells P50=12, P65=15, P80=18, P90=25\n",
-      "[Stage counts] TRAIN: {'Medium': 1687, 'Hard': 1063, 'Easy': 287}\n",
-      "[Stage counts] TEST:   {'Medium': 253, 'Hard': 134, 'Easy': 34}\n",
-      "[Easy] train:  230  -> splits/easy_train.jsonl\n",
-      "[Easy] valid:   57  -> splits/easy_valid.jsonl\n",
-      "[Easy] test:   34  -> splits/easy_test.jsonl\n",
-      "[Medium] train:  300  -> splits/medium_train.jsonl\n",
-      "[Medium] valid:   70  -> splits/medium_valid.jsonl\n",
-      "[Medium] test:   80  -> splits/medium_test.jsonl\n",
-      "[Hard] train:  220  -> splits/hard_train.jsonl\n",
-      "[Hard] valid:   60  -> splits/hard_valid.jsonl\n",
-      "[Hard] test:   80  -> splits/hard_test.jsonl\n",
-      "\n",
-      "[Sanity] Easy\n",
-      "  train -> {'n': 230, 'ops_max_med': 2.0, 'turns_med': 3.0, 'type2_rate': 0.0, 'pre_P50': 217, 'post_P50': 253, 'cells_P50': 9, 'deep_ops_rate': 0.0, 'long_turns_rate': 0.0, 'long_ctx_rate': 0.0, 'big_table_rate': 0.0, 'noisy_rate': 0.06086956521739131}\n",
-      "  valid -> {'n': 57, 'ops_max_med': 2.0, 'turns_med': 3.0, 'type2_rate': 0.0, 'pre_P50': 200, 'post_P50': 297, 'cells_P50': 8, 'deep_ops_rate': 0.0, 'long_turns_rate': 0.0, 'long_ctx_rate': 0.0, 'big_table_rate': 0.0, 'noisy_rate': 0.10526315789473684}\n",
-      "   test -> {'n': 34, 'ops_max_med': 2.0, 'turns_med': 3.0, 'type2_rate': 0.0, 'pre_P50': 189, 'post_P50': 272, 'cells_P50': 8, 'deep_ops_rate': 0.0, 'long_turns_rate': 0.0, 'long_ctx_rate': 0.0, 'big_table_rate': 0.0, 'noisy_rate': 0.08823529411764706}\n",
-      "\n",
-      "[Sanity] Medium\n",
-      "  train -> {'n': 300, 'ops_max_med': 2.0, 'turns_med': 4.0, 'type2_rate': 0.32666666666666666, 'pre_P50': 243, 'post_P50': 253, 'cells_P50': 11, 'deep_ops_rate': 0.0, 'long_turns_rate': 0.0, 'long_ctx_rate': 0.0, 'big_table_rate': 0.0, 'noisy_rate': 0.07666666666666666}\n",
-      "  valid -> {'n': 70, 'ops_max_med': 2.0, 'turns_med': 3.5, 'type2_rate': 0.32857142857142857, 'pre_P50': 216, 'post_P50': 269, 'cells_P50': 12, 'deep_ops_rate': 0.0, 'long_turns_rate': 0.0, 'long_ctx_rate': 0.0, 'big_table_rate': 0.0, 'noisy_rate': 0.1}\n",
-      "   test -> {'n': 80, 'ops_max_med': 2.0, 'turns_med': 3.0, 'type2_rate': 0.3625, 'pre_P50': 206, 'post_P50': 216, 'cells_P50': 13, 'deep_ops_rate': 0.0, 'long_turns_rate': 0.0, 'long_ctx_rate': 0.0, 'big_table_rate': 0.0, 'noisy_rate': 0.025}\n",
-      "\n",
-      "[Sanity] Hard\n",
-      "  train -> {'n': 220, 'ops_max_med': 2.0, 'turns_med': 5.0, 'type2_rate': 0.42727272727272725, 'pre_P50': 222, 'post_P50': 270, 'cells_P50': 15, 'deep_ops_rate': 0.2590909090909091, 'long_turns_rate': 0.2590909090909091, 'long_ctx_rate': 0.37272727272727274, 'big_table_rate': 0.2681818181818182, 'noisy_rate': 0.20454545454545456}\n",
-      "  valid -> {'n': 60, 'ops_max_med': 2.0, 'turns_med': 4.0, 'type2_rate': 0.4, 'pre_P50': 161, 'post_P50': 292, 'cells_P50': 17, 'deep_ops_rate': 0.23333333333333334, 'long_turns_rate': 0.16666666666666666, 'long_ctx_rate': 0.38333333333333336, 'big_table_rate': 0.25, 'noisy_rate': 0.25}\n",
-      "   test -> {'n': 80, 'ops_max_med': 2.0, 'turns_med': 4.0, 'type2_rate': 0.325, 'pre_P50': 176, 'post_P50': 177, 'cells_P50': 18, 'deep_ops_rate': 0.15, 'long_turns_rate': 0.0375, 'long_ctx_rate': 0.4375, 'big_table_rate': 0.3375, 'noisy_rate': 0.275}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from pprint import pprint\n",
     "from pathlib import Path\n",
@@ -2537,15 +2534,6 @@
     "OUTDIR = Path(\"splits\")\n",
     "RANDOM_STATE = 42\n",
     "\n",
-    "# Expect: train_flat_df, test_flat_df already loaded with columns:\n",
-    "# ['id','doc_pre_text','doc_post_text','doc_table','dialogue_conv_questions',\n",
-    "#  'dialogue_conv_answers','dialogue_turn_program','dialogue_executed_answers',\n",
-    "#  'dialogue_qa_split','features_num_dialogue_turns','features_has_type2_question',\n",
-    "#  'features_has_duplicate_columns','features_has_non_numeric_values',\n",
-    "#  'n_rows','n_cols','total_cells','nested_tables','max_ops_per_conversation',\n",
-    "#  'doc_pre_text_len','doc_post_text_len']\n",
-    "\n",
-    "# --- percentiles on TRAIN only (add P65, P90) ---\n",
     "P50_pre = int(train_flat_df[\"doc_pre_text_len\"].quantile(0.50))\n",
     "P65_pre = int(train_flat_df[\"doc_pre_text_len\"].quantile(0.65))\n",
     "P80_pre = int(train_flat_df[\"doc_pre_text_len\"].quantile(0.80))\n",
@@ -2568,7 +2556,6 @@
     ")\n",
     "\n",
     "\n",
-    "# --- Stage assignment (unchanged) ---\n",
     "def assign_stages(df: pd.DataFrame) -> pd.Series:\n",
     "    mops = df[\"max_ops_per_conversation\"]\n",
     "    turns = df[\"features_num_dialogue_turns\"]\n",
@@ -2598,7 +2585,7 @@
     "        )\n",
     "    )\n",
     "\n",
-    "    # EASY (broaden to P65)\n",
+    "    # EASY (P65)\n",
     "    easy = (~hard) & (\n",
     "        (mops <= 2)\n",
     "        & (turns.between(2, 4, inclusive=\"both\"))\n",
@@ -2638,7 +2625,6 @@
     "print(\"[Stage counts] TEST:  \", cur_test_df[\"stage\"].value_counts().to_dict())\n",
     "\n",
     "\n",
-    "# --- Simple sampler (unchanged) ---\n",
     "def sample_df(df: pd.DataFrame, n: int, seed: int) -> pd.DataFrame:\n",
     "    if n <= 0 or df.empty:\n",
     "        return df.iloc[0:0]\n",
@@ -2651,7 +2637,6 @@
     "# HARD QUOTA REBALANCING\n",
     "# =========================\n",
     "\n",
-    "# Proportions for Hard buckets (sum ≈ 1.0). Tune if desired.\n",
     "HARD_PROPS = {\n",
     "    \"deep_ops\": 0.23,  # max_ops >= 4\n",
     "    \"long_turns\": 0.23,  # turns >= 7\n",
@@ -2691,7 +2676,7 @@
     "    taken_idx = set()\n",
     "    out_parts = []\n",
     "\n",
-    "    # fixed priority: emphasize \"deep_ops\" and \"long_turns\"/\"long_ctx\" first\n",
+    "    # emphasize \"deep_ops\" and \"long_turns\"/\"long_ctx\" first\n",
     "    order = [\"deep_ops\", \"long_turns\", \"long_ctx\", \"big_table\", \"noisy\"]\n",
     "    desired = {k: int(round(total_n * props.get(k, 0.0))) for k in order}\n",
     "    # adjust rounding to not exceed total_n\n",
@@ -2730,9 +2715,9 @@
     "    if out_parts:\n",
     "        out = pd.concat(out_parts, axis=0)\n",
     "    else:\n",
-    "        out = pool.iloc[0:0]  # empty\n",
+    "        out = pool.iloc[0:0]\n",
     "\n",
-    "    return out.sample(frac=1.0, random_state=seed)  # shuffle for stability\n",
+    "    return out.sample(frac=1.0, random_state=seed)\n",
     "\n",
     "\n",
     "# --- Build splits with quota rebalance only for Hard ---\n",
@@ -2789,14 +2774,12 @@
     "\n",
     "    splits[stage] = {\"train\": train, \"valid\": valid, \"test\": test}\n",
     "\n",
-    "    # write JSONL files with just ids (easy to join later)\n",
     "    for split_name, df_part in splits[stage].items():\n",
     "        outp = OUTDIR / f\"{stage.lower()}_{split_name}.jsonl\"\n",
     "        df_part[[\"id\"]].to_json(outp, orient=\"records\", lines=True, force_ascii=False)\n",
     "        print(f\"[{stage}] {split_name}: {len(df_part):4d}  -> {outp}\")\n",
     "\n",
     "\n",
-    "# --- quick sanity report ---\n",
     "def quick_report(df):\n",
     "    if len(df) == 0:\n",
     "        return {\"n\": 0}\n",
@@ -2843,7 +2826,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "So far, we've explored the given dataset, and we've decided to do curriculum learning for the problem statement."
+    "Through this exploratory analysis, we've established the foundation for applying curriculum learning to financial reasoning tasks:\n",
+    "\n",
+    "**Key Insights:**\n",
+    "- ConvFinQA complexity varies dramatically across multiple dimensions: reasoning depth (1-6+ operations), conversation length (2-10+ turns), context density, table size, and data quality\n",
+    "- Simple random sampling from difficulty buckets creates imbalanced curricula that overemphasize certain complexity types\n",
+    "- Quota-based sampling ensures balanced representation across all complexity dimensions in our training data\n",
+    "\n",
+    "**What's Next:**\n",
+    "- **Modelling**: We'll implement DSPy baselines across our curriculum stages, exploring different LLM models and narrowing down to the most promising models\n",
+    "- **Optimization**: We'll apply DSPy's optimization techniques with our curriculum learning strategy to achieve state-of-the-art performance\n",
+    "\n",
+    "The curriculum learning framework is now ready — let's see how DSPy performs when guided by our complexity-aware training progression."
    ]
   }
  ],
