--- a/posts/2025-08-31-cl-dspy-eda.ipynb
+++ b/posts/2025-08-31-cl-dspy-eda.ipynb
@@ -28,6 +28,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "While interviewing for my next role, I received a take-home assignment focused on financial reasoning over conversational data. Given all the hype around DSPy, I decided to use this opportunity to finally learn the tool properly.\n",
+    "\n",
     "Financial reasoning over conversational data presents a unique challenge in NLP: models must not only understand natural language but also perform multi-step numerical computations while maintaining context across dialogue turns.\n",
     "\n",
     "[ConvFinQA](https://github.com/czyssrs/ConvFinQA) tackles this problem by combining conversational QA with financial documents and tables, requiring systems to execute chains of mathematical operations to arrive at correct answers.\n",
@@ -167,7 +169,184 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The data matches the schema given in the `dataset.md` file."
+    "The data matches the schema given in the `dataset.md` file.\n",
+    "\n",
+    "<details>\n",
+    "<summary>dataset.md</summary>\n",
+    "# Dataset Card\n",
+    "\n",
+    "## Table of Contents\n",
+    "- [Summary](#summary)\n",
+    "- [Useful Extracts from the Paper](#useful-extracts-from-the-paper)\n",
+    "  - [Types of Question](#types-of-question)\n",
+    "- [Dataset Statistics](#dataset-statistics)\n",
+    "- [Baselines](#baselines)\n",
+    "  - [Human Baselines](#human-baselines)\n",
+    "  - [Model Baselines](#model-baselines)\n",
+    "    - [Statistics](#statistics)\n",
+    "    - [Analysis from the Paper](#analysis-from-the-paper-section-53)\n",
+    "- [Dataset Structure](#dataset-structure)\n",
+    "  - [Data Fields](#data-fields)\n",
+    "  - [Cleaning Process](#cleaning-process)\n",
+    "\n",
+    "## Summary \n",
+    "This dataset is a cleaner version of the original dataset from the [ConFinQA repo](https://github.com/czyssrs/ConvFinQA). This dataset consists of conversational numerical reasoning questions over unstructured financial documents, containing datatables. \n",
+    "\n",
+    "## Useful Extracts from the Paper\n",
+    "> CONVFINQA (Conversational Finance Question Answering), with 3,892 conversations consisting of 14,115 questions. To construct the dataset, we design a framework to simulate the conversation flow by decomposition and concatenation of the multihop questions from the FinQA dataset.\n",
+    "\n",
+    "> In our CONVFINQA dataset, the major challenge is to learn the chain of numerical reasoning throughout the conversation turns.\n",
+    "\n",
+    "A sample example:\n",
+    "\n",
+    "<img src=\"cl_dspy/exampleq.png\" alt=\"Example Question\" width=\"400\"/>\n",
+    "\n",
+    "### Types of Question: \n",
+    "- **Type I: Simple conversation**: we take one muti-hop question and decompose its reasoning program into single steps – each reasoning step will then be realized into one question as one conversation turn. \n",
+    "- **Type II: Hybrid conversations**: We take two multi-hop questions about the same report and break down their reasoning steps. Then, we add a number selection steps like in type I conversations. By combining the steps from both questions, we build a full conversation that reflects someone asking about two related aspects of the same report. Since these aspects are often connected, the resulting conversation includes longer reasoning chains across turns.\n",
+    "\n",
+    "<img src=\"cl_dspy/conversation_types.png\" alt=\"Conversation Types\" width=\"500\"/>\n",
+    "\n",
+    "## Dataset Statistics\n",
+    ">We end up with 3,892 conversations containing 14,115 questions. We split the\n",
+    "dataset into 3,037/421/434 for train/dev/test sets.\n",
+    "2,715 of the conversations are simple conversations,\n",
+    "and the rest 1,177 are hybrid conversations.\n",
+    "\n",
+    "| Split | Conversations | Questions |\n",
+    "|-------|----------------|-----------|\n",
+    "| Train | 3,037          | —         |\n",
+    "| Dev   | 421            | —         |\n",
+    "| Test  | 434            | —         |\n",
+    "| **Total** | **3,892**      | **14,115**   |\n",
+    "\n",
+    "<img src=\"cl_dspy/dataset_stats.png\" alt=\"Dataset Statistics\" width=\"350\"/>\n",
+    "\n",
+    "## Baselines\n",
+    "\n",
+    "### Human Baselines \n",
+    "> To evaluate the quality of CONVFINQA and establish human performance references, we sample 200 example questions and distribute to both the expert and laymen\n",
+    "annotators to answer. \n",
+    "\n",
+    "| Annotator                        | Exe Acc |\n",
+    "|----------------------------------|---------|\n",
+    "| **Human Expert Performance**         | **89.44**   |\n",
+    "| General Crowd Performance        | 46.90   |\n",
+    "\n",
+    "\n",
+    "### Model Baselines \n",
+    "#### Statistics\n",
+    "\n",
+    "| Model           | Method                | Exe Acc |\n",
+    "|------------------|-------------------------------|---------|\n",
+    "| GPT-3  | answer-only-prompt            | 24.09   |\n",
+    "| GPT-3   | CoT prompting                 | 40.63   |\n",
+    "| GPT-3   | DSL program* | 45.15   |\n",
+    "| FinQANet(RoBERTa-large)** | DSL program | **68.90** |\n",
+    "\n",
+    "*Referred to as: `Program-normal-DSL` prompting in the paper\n",
+    "\n",
+    "**Proposed in FinQA, it is a pipeline approach with a retriever to first retrieve the supporting facts from the input financial report, then a generator to generate the DSL program to get the answer.\n",
+    "Note: all methods in this baseline table had a retrieval step, not just FinQANet.\n",
+    "#### Analysis from the Paper (Section 5.3): \n",
+    "> The model [FinQANet] excels at number selection questions.\n",
+    "For the number selection questions depending on\n",
+    "previous references, e.g., what is that value in the\n",
+    "subsequent year?, the model is mostly able to answer. Also, the model is mostly clear on when to\n",
+    "discard the previous context and make the transition to new questions.\n",
+    "\n",
+    "> The model [FinQANet] suffers from the lack of domain\n",
+    "knowledge. The lack of financial knowledge\n",
+    "leads to many errors of missing retrieval facts,\n",
+    "wrong value selections, and wrong mathematical\n",
+    "generations. Nonetheless, the current large pretrained models do see financial corpus during pretraining; we still need to endow the system with\n",
+    "stronger domain knowledge for tasks requiring\n",
+    "high-level, complex domain reasoning abilities.\n",
+    "\n",
+    "> The model [FinQANet] struggles with long reasoning chains.\n",
+    "For the later question turns in a conversation that\n",
+    "demonstrate longer reasoning dependencies to the\n",
+    "previous context, the model often struggles with\n",
+    "deducting the correct reasoning programs. If the\n",
+    "prediction for any turn is wrong, then there is a very\n",
+    "minor chance that the subsequent turns are correct.\n",
+    "\n",
+    "> Later turns in the conversations [by FinQANet] tend to be harder to answer due to longer reasoning dependencies. [See figure 5.]\n",
+    "\n",
+    "<img src=\"cl_dspy/figure5.png\" alt=\"Figure 5\" width=\"500\"/>\n",
+    "\n",
+    "\n",
+    "## Dataset Structure \n",
+    "\n",
+    "### Data Fields\n",
+    "\n",
+    "```python\n",
+    "class ConvFinQARecord(BaseModel):\n",
+    "    id: str = Field(description=\"The id of the record\")\n",
+    "    doc: Document = Field(description=\"The document\")\n",
+    "    dialogue: Dialogue = Field(description=\"The conversational dialogue\")\n",
+    "    features: Features = Field(description=\"The features of the record, created by XXX to help you understand the data\")\n",
+    "\n",
+    "\n",
+    "class Document(BaseModel):\n",
+    "    pre_text: str = Field(description=\"The text before the table in the document\")\n",
+    "    post_text: str = Field(description=\"The text after the table in the document\")\n",
+    "    table: dict[str, dict[str, float | str | int]] = Field(\n",
+    "        description=\"The table of the document as a dictionary \"\n",
+    "    )\n",
+    "\n",
+    "\n",
+    "class Dialogue(BaseModel):\n",
+    "    conv_questions: list[str] = Field(\n",
+    "        description=\"The questions in the conversation dialogue, originally called 'dialogue_break'\"\n",
+    "    )\n",
+    "    conv_answers: list[str] = Field(\n",
+    "        description=\"The answers to each question turn, derived from 'answer_list' and original FinQA answers\"\n",
+    "    )\n",
+    "    turn_program: list[str] = Field(\n",
+    "        description=\"The DSL turn program for each question turn\"\n",
+    "    )\n",
+    "    executed_answers: list[float | str] = Field(\n",
+    "        description=\"The golden program execution results for each question turn\"\n",
+    "    )\n",
+    "    qa_split: list[bool] = Field(\n",
+    "        description=\"This field indicates the source of each question turn - 0 if from the decomposition of the first FinQA question, 1 if from the second. For the Type I simple conversations, this field is all 0s.\"\n",
+    "    )\n",
+    "\n",
+    "\n",
+    "class Features(BaseModel):\n",
+    "    num_dialogue_turns: int = Field(\n",
+    "        description=\"The number of turns in the dialogue, calculated from the length of conv_questions\"\n",
+    "    )\n",
+    "    has_type2_question: bool = Field(\n",
+    "        description=\"Whether the dialogue has a type 2 question, calculated if qa_split contains a 1 this will return true\"\n",
+    "    )\n",
+    "    has_duplicate_columns: bool = Field(\n",
+    "        description=\"Whether the table has duplicate column names not fully addressed during cleaning. We suffix the duplicate column headers with a number if there was no algorithmic fix. e.g. 'Revenue (1)' or 'Revenue (2) \"\n",
+    "    )\n",
+    "    has_non_numeric_values: bool = Field(\n",
+    "        description=\"Whether the table has non-numeric values\"\n",
+    "    )\n",
+    "```\n",
+    "\n",
+    "\n",
+    "### Cleaning Process\n",
+    "\n",
+    "The original data is in a messy disorganised state with a lot of errors in the original OCR process. We have cleaned it for you for the purpose of this task. Though it is not perfect.\n",
+    "\n",
+    "\n",
+    "\n",
+    "**Tables:** \n",
+    "- Fix duplicate column headers, either by inspecting the original table or by suffixing the duplicate column headers with a number if there was no algorithmic fix. e.g. 'Revenue (1)' or 'Revenue (2)'\n",
+    "- Convert all values to numeric where applicable, e.g. negative values are sometimes written as '(12345)' or '-12345 (12345)' when they should be -12345.0\n",
+    "\n",
+    "**Dialogue:** \n",
+    "- Answer list is now the correct length and corresponds to the number of the dialogue questions\n",
+    "- Answer list contains the correct answers for each conversational question instead of placeholder values located in multiple places\n",
+    "\n",
+    "\n",
+    "</details>\n",
+    "\n"
    ]
   },
   {
