--- a/index.qmd
+++ b/index.qmd
@@ -3,12 +3,12 @@ title: "Tech Musings"
 listing:
   contents: posts
   sort: "date desc"
-  type: table
+  type: default
   sort-ui: false
   filter-ui: false
   feed: true
   image-height: 170px
-  fields: [date, title]
+  fields: [date, reading-time, title, description, image]
 page-layout: full
 title-block-banner: true
 ---
