--- a/posts/2025-08-31-cl-dspy-eda.ipynb
+++ b/posts/2025-08-31-cl-dspy-eda.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "title: \"Curriculum Learning 🤝 DSPy: Data Exploration\"\n",
+    "title: \"Curriculum Learning 🤝 DSPy: Exploration\"\n",
     "author: Shubham Gupta\n",
     "date: '2025-08-31'\n",
     "image: cl_dspy/curriculum_learning_data.png\n",
