--- a/index.qmd
+++ b/index.qmd
@@ -8,7 +8,7 @@ listing:
   filter-ui: false
   feed: true
   image-height: 170px
-  fields: [date, title, subtitle, description, reading-time, image]
+  fields: [date, reading-time, title, description, image]
 page-layout: full
 title-block-banner: true
 ---
