Revert to using notebook

--- a/posts/2025-09-01-cl-dspy-modelling/2025-09-01-cl-dspy-modelling.ipynb
+++ b/posts/2025-09-01-cl-dspy-modelling/2025-09-01-cl-dspy-modelling.ipynb
@@ -4,6 +4,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "---\n",
+    "title: \"Curriculum Learning 🤝 DSPy: Modelling\"\n",
+    "author: Shubham Gupta\n",
+    "date: '2025-09-01'\n",
+    "image: ../cl_dspy/curriculum_learning_data.png\n",
+    "description: Mapping ConvFinQA and crafting a curriculum for financial QA\n",
+    "lightbox: true\n",
+    "toc: true\n",
+    "footnotes-hover: false\n",
+    "resources:\n",
+    "  - _2025-09-01-cl-dspy-modelling.html \n",
+    "  - _2025-09-01-cl-dspy-modelling_files/*\n",
+    "redirect: _2025-09-01-cl-dspy-modelling.html\n",
+    "categories:\n",
+    "- programming\n",
+    "- dspy\n",
+    "- curriculum-learning\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "In our [previous exploration](../2025-08-31-cl-dspy-eda.ipynb), we analyzed 3,458 ConvFinQA records and established a curriculum learning framework with three difficulty stages: **Easy** (≤2 ops, simple context), **Medium** (2-3 ops, moderate complexity), and **Hard** (≥4 ops, complex multi-turn reasoning). \n",
     "\n",
     "Now it's time to put this curriculum to work by implementing and evaluating our models.\n",
@@ -17,14 +41,12 @@
     "**Why DSPy for curriculum learning?**\n",
     "\n",
     "- **Reproducible experiments**: Prompts become Python objects → diffable, unit-testable, version-controlled\n",
-    "- **Systematic optimization**: Built-in optimizers (LabeledFewShot, BootstrapFewShot) auto-search the prompt space across our curriculum stages\n",
+    "- **Optimization**: Built-in optimizers (LabeledFewShot, BootstrapFewShot) auto-search the prompt space across our curriculum stages\n",
     "- **Clean evaluation pipeline**: First-class metrics support—plug in exact match, hit .compile(), get train/val loops with curriculum-aware sampling\n",
     "- **Model flexibility**: Test curriculum effects across GPT-4, o4-mini, Gemini, and open-source models with one-line swaps\n",
     "- **Efficient iteration**: Caching and threading speed up development cycles crucial for curriculum experiments\n",
     "\n",
-    "This systematic approach lets us rigorously test whether our Easy→Medium→Hard curriculum improves financial reasoning compared to random sampling.\n",
-    "\n",
-    "**Resources**: [DSPy Documentation](https://docs.dspy.ai/)"
+    "This approach lets us test whether our Easy→Medium→Hard curriculum improves financial reasoning compared to random sampling."
    ]
   },
   {
